compiler/weave_syntax/tests/data/Strings.error
error: Unexpected tokens
        --> <source>:68:2
         |
      68 | r#~"#"~#;
         |  ^^
error: Unexpected tokens
        --> <source>:68:7
         |
      68 | r#~"#"~#;
         |       ^^
error: Unexpected tokens
        --> <source>:69:1
         |
      69 | ;
         | ^
